--- a/Project.toml
+++ b/Project.toml
@@ -2,3 +2,8 @@ name = "Blobs"
 uuid = "f5f1b6c9-b07c-4ed5-904b-493b2c9b064c"
 authors = ["Nick Boyd <nickboyd@gmail.com>"]
 version = "0.1.0"
+
+[deps]
+Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
+LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
+StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
