--- a/Project.toml
+++ b/Project.toml
@@ -1,4 +1,4 @@
-name = "Blobs"
+name = "XGBlobs"
 uuid = "f5f1b6c9-b07c-4ed5-904b-493b2c9b064c"
 authors = ["Nick Boyd <nickboyd@gmail.com>"]
 version = "0.1.0"
